--- a/README.org
+++ b/README.org
@@ -15,7 +15,47 @@ tool is being used "under the hood" and they should be credited appropiately.
 * As a simple wrapper
 
 When used as a simple wrapper commands can be passed to the isotropy program and
-results are parsed in to appropiate python types.
+results are parsed in to a list of python dictionaries.
+
+This requires some knowledge of how to use the command line tool itself, but is
+the basis for how other functionality is built.
+
+Obtain the possible irreps and their directions involved in a particular
+symmetry lowering phase transition:
+#+BEGIN_SRC ipython :session :ipyfile :exports :results output drawer :async t :pydir /home/john/.tmp-obpy
+import pysotropy as iso
+
+values = {'parent': 221, 'subgroup': 99}
+shows = ['irrep', 'direction vector']
+with iso.IsotropySession(values, shows) as isos:
+    irreps = isos.getDisplayData('ISOTROPY')
+print(results)
+#+END_SRC
+
+#+RESULTS:
+:RESULTS:
+[{'Wyckoff': 'a', 'Point': ['0', '0', '0'], 'Projected Vectors': [['1', '0', '0'], ['0', '1', '0'], ['0', '0', '1']]}, {'Wyckoff': 'b', 'Point': ['1/2', '1/2', '1/2'], 'Projected Vectors': [['1', '0', '0'], ['0', '1', '0'], ['0', '0', '1']]}, {'Wyckoff': 'c', 'Point': [['0', '1/2', '1/2'], ['1/2', '1/2', '0'], ['1/2', '0', '1/2']], 'Projected Vectors': [[['1', '0', '0'], ['0', '0', '0'], ['0', '0', '0']], [['0', '0', '0'], ['0', '0', '0'], ['0', '0', '1']], [['0', '0', '0'], ['0', '1', '0'], ['0', '0', '0']]]}, {'Wyckoff': 'c', 'Point': [['0', '1/2', '1/2'], ['1/2', '1/2', '0'], ['1/2', '0', '1/2']], 'Projected Vectors': [[['0', '0', '0'], ['0', '2', '0'], ['0', '0', '2']], [['2', '0', '0'], ['0', '2', '0'], ['0', '0', '0']], [['2', '0', '0'], ['0', '0', '0'], ['0', '0', '2']]]}]
+:END:
+
+#+BEGIN_SRC ipython :session :ipyfile :exports :results output drawer :async t :pydir /home/john/.tmp-obpy
+values = {'parent': 221,
+          'wyckoff': 'a b c',
+          'irrep': irreps[0]['Irrep'],
+          }
+shows = ['basis', 'wyckoff', 'microscopic vector']
+with iso.IsotropySession(values, shows) as isos:
+    distortion =  isos.getDisplayData('DISTORTION')
+for wyck in distortion:
+    print(wyck)
+#+END_SRC
+
+#+RESULTS:
+:RESULTS:
+{'Wyckoff': 'a', 'Point': ['0', '0', '0'], 'Projected Vectors': [['1', '0', '0'], ['0', '1', '0'], ['0', '0', '1']]}
+{'Wyckoff': 'b', 'Point': ['1/2', '1/2', '1/2'], 'Projected Vectors': [['1', '0', '0'], ['0', '1', '0'], ['0', '0', '1']]}
+{'Wyckoff': 'c', 'Point': [['0', '1/2', '1/2'], ['1/2', '1/2', '0'], ['1/2', '0', '1/2']], 'Projected Vectors': [[['1', '0', '0'], ['0', '0', '0'], ['0', '0', '0']], [['0', '0', '0'], ['0', '0', '0'], ['0', '0', '1']], [['0', '0', '0'], ['0', '1', '0'], ['0', '0', '0']]]}
+{'Wyckoff': 'c', 'Point': [['0', '1/2', '1/2'], ['1/2', '1/2', '0'], ['1/2', '0', '1/2']], 'Projected Vectors': [[['0', '0', '0'], ['0', '2', '0'], ['0', '0', '2']], [['2', '0', '0'], ['0', '2', '0'], ['0', '0', '0']], [['2', '0', '0'], ['0', '0', '0'], ['0', '0', '2']]]}
+:END:
 
 * pysodistort for finding symmetry
 
